Dynamically generate tile backgrounds as opposed to picture-based. Created layout and activity to set dimensions

--- a/A2/slidingtiles/app/src/main/AndroidManifest.xml
+++ b/A2/slidingtiles/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name="fall2018.csc2017.slidingtiles.GameActivity"></activity>
+        <activity android:name="fall2018.csc2017.slidingtiles.ChooseDimensionsActivity"></activity>
     </application>
 
 </manifest>
