--- a/A2/slidingtiles/app/src/main/AndroidManifest.xml
+++ b/A2/slidingtiles/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="fall2018.csc2017.slidingtiles.StartingActivity">
+        <activity android:name=".StartingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="fall2018.csc2017.slidingtiles.GameActivity"></activity>
+        <activity android:name=".GameActivity" />
+        <activity android:name=".ScoreboardActivity" />
+        <activity android:name=".UserScoreboardActivity" />
+        <activity android:name=".ScoreActivity" />
+        <activity android:name=".SlidingScoreboardActivity"></activity>
     </application>
 
 </manifest>
