--- a/A2/slidingtiles/local.properties
+++ b/A2/slidingtiles/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 26 17:19:17 EDT 2018
-sdk.dir=/Users/pgries/Library/Android/sdk
+#Sat Nov 03 21:29:54 AZT 2018
+sdk.dir=C\:\\Users\\Osi\\AppData\\Local\\Android\\Sdk
