--- a/A2/slidingtiles/local.properties
+++ b/A2/slidingtiles/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Oct 23 14:37:02 EDT 2018
-sdk.dir=/Users/NewMac/Library/Android/sdk
+sdk.dir=C\:\\Users\\Nicu\\AppData\\Local\\Android\\Sdk
