--- a/A2/slidingtiles/app/src/main/AndroidManifest.xml
+++ b/A2/slidingtiles/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="fall2018.csc2017.slidingtiles">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -39,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ScoreboardActivity" />
     </application>
 
 </manifest>
