--- a/A2/slidingtiles/local.properties
+++ b/A2/slidingtiles/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 23 14:37:02 EDT 2018
-sdk.dir=/Users/NewMac/Library/Android/sdk
+#Sun Nov 04 18:54:14 EST 2018
+sdk.dir=/Users/soniazaldana/Library/Android/sdk
