Added README and TEAM files

--- a/Phase1/slidingtiles/app/src/main/AndroidManifest.xml
+++ b/Phase1/slidingtiles/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".GameLauncherActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".ChooseDimensionsActivity"/>
-        <activity android:name=".SlidingTilesActivity"/>
+        <activity android:name=".SlidingTilesStartingActivity"/>
 
     </application>
 
