--- a/Phase1/slidingtiles/app/src/main/AndroidManifest.xml
+++ b/Phase1/slidingtiles/app/src/main/AndroidManifest.xml
@@ -17,14 +17,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".GameActivity" />
-        <activity android:name=".ScoreboardActivity" />
+        <activity android:name=".ScoreboardMenuActivity" />
         <activity android:name=".UserScoreboardActivity" />
         <activity android:name=".ScoreCalculatorActivity" />
         <activity android:name=".SlidingScoreboardActivity"/>
         <activity android:name=".GameLauncherActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".ChooseDimensionsActivity"/>
-        <activity android:name=".StartingActivity"/>
+        <activity android:name=".SlidingTilesStartingActivity"/>
 
     </application>
 
