--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".Score.ScoreboardMenuActivity" />
         <activity android:name=".Score.UserScoreboardActivity" />
         <activity android:name=".Score.ScoreScreenActivity" />
-        <activity android:name=".SlidingTiles.SlidingScoreboardActivity" />
+        <activity android:name=".Score.SlidingScoreboardActivity" />
         <activity android:name=".GameLauncherActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ChooseDimensionsActivity" />
