Worked on the Game Activity and added the starting activity

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ChooseDimensionsActivity" />
         <activity android:name=".SlidingTiles.SlidingTilesStartingActivity" />
-        <activity android:name=".Simon.SimonActivity"></activity>
+        <activity android:name=".Simon.SimonGameActivity" />
+        <activity android:name=".Simon.SimonStartingActivity"></activity>
     </application>
 
 </manifest>
