--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -25,10 +25,11 @@
         <activity android:name=".Score.SlidingScoreboardActivity" />
         <activity android:name=".GameLauncherActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".ChooseDimensionsActivity" />
+        <activity android:name=".SlidingTiles.ChooseDimensionsSlidingActivity" />
         <activity android:name=".SlidingTiles.SlidingTilesStartingActivity" />
         <activity android:name=".Simon.SimonGameActivity" />
-        <activity android:name=".Simon.SimonStartingActivity"></activity>
+        <activity android:name=".Simon.SimonStartingActivity" />
+        <activity android:name=".Simon.ChooseDimensionSimonActivity"></activity>
     </application>
 
 </manifest>
