Added the Simon Scoreboard and refactored some scoreboard things

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".SlidingTiles.SlidingTilesStartingActivity" />
         <activity android:name=".Simon.SimonGameActivity" />
         <activity android:name=".Simon.SimonStartingActivity" />
-        <activity android:name=".Simon.ChooseDimensionSimonActivity"></activity>
+        <activity android:name=".Simon.ChooseDimensionSimonActivity" />
+        <activity android:name=".Score.SimonScoreboardActivity"></activity>
     </application>
 
 </manifest>
