Further refactoring to scoreboard as well as creating minesweeper scoreboard. I also made sure that the score screen activity can be used by all games.

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".Simon.SimonGameActivity" />
         <activity android:name=".Simon.SimonStartingActivity" />
         <activity android:name=".Simon.ChooseDimensionSimonActivity" />
-        <activity android:name=".Score.SimonScoreboardActivity"></activity>
+        <activity android:name=".Score.SimonScoreboardActivity" />
+        <activity android:name=".Score.MinesweeperScoreboardActivity"></activity>
     </application>
 
 </manifest>
