--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -32,6 +32,14 @@
         <activity android:name=".Simon.ChooseDimensionSimonActivity" />
         <activity android:name=".Score.SimonScoreboardActivity" />
         <activity android:name=".Score.MinesweeperScoreboardActivity"></activity>
+        <activity android:name=".MineSweeper.ChooseDimensionActivitty">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MineSweeper.MineSweeperActivity"/>
     </application>
 
 </manifest>
