Refactored choosedimension screen, so now there is a single activity that works for both Sliding Tiles and Simon. Heavy refactoring!!!

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -25,11 +25,10 @@
         <activity android:name=".Score.GameScoreboardActivity" />
         <activity android:name=".GameLauncherActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".SlidingTiles.ChooseDimensionsSlidingActivity" />
         <activity android:name=".SlidingTiles.SlidingTilesStartingActivity" />
         <activity android:name=".Simon.SimonGameActivity" />
         <activity android:name=".Simon.SimonStartingActivity" />
-        <activity android:name=".Simon.ChooseDimensionSimonActivity" />
+        <activity android:name=".ChooseDimensionActivity"></activity>
     </application>
 
 </manifest>
