--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".Simon.SimonGameActivity" />
         <activity android:name=".Simon.SimonStartingActivity" />
         <activity android:name=".Simon.ChooseDimensionSimonActivity" />
+        <activity android:name=".MineSweeper.SweeperStartingActivity" />
+        <activity android:name=".MineSweeper.MineSweeperActivity" />
     </application>
 
 </manifest>
