--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".SlidingTiles.SlidingTilesStartingActivity" />
         <activity android:name=".Simon.SimonGameActivity" />
         <activity android:name=".Simon.SimonStartingActivity" />
+        <activity android:name=".MineSweeper.MineSweeperActivity"/>
+        <activity android:name=".MineSweeper.SweeperStartingActivity"/>
         <activity android:name=".Simon.ChooseDimensionSimonActivity" />
         <activity android:name=".Score.SimonScoreboardActivity" />
         <activity android:name=".Score.MinesweeperScoreboardActivity"></activity>
@@ -39,7 +41,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MineSweeper.MineSweeperActivity"/>
     </application>
 
 </manifest>
