Added pop up activity to be able to save more than one instance of the game. Still need to implement how to see those saved games when opening it.

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".SlidingTiles.SlidingTilesStartingActivity" />
         <activity android:name=".Simon.SimonGameActivity" />
         <activity android:name=".Simon.SimonStartingActivity" />
-        <activity android:name=".ChooseDimensionActivity"></activity>
+        <activity android:name=".ChooseDimensionActivity" />
+        <activity android:name=".Simon.SavePopup"></activity>
     </application>
 
 </manifest>
