--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".Simon.ChooseDimensionSimonActivity" />
         <activity android:name=".Score.SimonScoreboardActivity" />
         <activity android:name=".Score.MinesweeperScoreboardActivity"></activity>
-        <activity android:name=".MineSweeper.ChooseDimensionActivitty">
+        <activity android:name=".MineSweeper.ChooseDimensionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
