Alex's minesweeper commit and fixed the manifest

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -30,16 +30,7 @@
         <activity android:name=".Simon.SimonStartingActivity" />
         <activity android:name=".MineSweeper.MineSweeperActivity"/>
         <activity android:name=".MineSweeper.SweeperStartingActivity"/>
-        <activity android:name=".Simon.ChooseDimensionSimonActivity" />
-        <activity android:name=".Score.SimonScoreboardActivity" />
-        <activity android:name=".Score.MinesweeperScoreboardActivity"></activity>
-        <activity android:name=".MineSweeper.ChooseDimensionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ChooseDimensionActivity" />
     </application>
 
 </manifest>
