Fixed the new game link in minesweeper and implemented only allowing solvable boards in Sliding Tiles.

--- a/Phase2/GameCentre/app/src/main/AndroidManifest.xml
+++ b/Phase2/GameCentre/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".Simon.SimonStartingActivity" />
         <activity android:name=".MineSweeper.MineSweeperActivity"/>
         <activity android:name=".MineSweeper.SweeperStartingActivity"/>
-        <activity android:name=".MineSweeper.ChooseDimensionActivity"/>
+        <activity android:name=".MineSweeper.SweeperChooseDimensionActivity"/>
         <activity android:name=".ChooseDimensionActivity" />
     </application>
 
